# winner-systems-system-smart-parking

./: .gitignore
ai/: README.md
ai/parking-configuration/: README.md
ai/parking-configuration/scripts/: configure_polygons.py  requirements.txt  validate_polygons.py
backend/services/ia-service/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/services/ia-service/app/: main.py
backend/services/ia-service/app/api/v1/: __init__.py  parking_vision.py  recognition.py
backend/services/ia-service/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
backend/services/ia-service/app/ml/: __init__.py
backend/services/ia-service/app/ml/dl/: __init__.py
backend/services/ia-service/app/ml/dl/ocr/: __init__.py  reader.py
backend/services/ia-service/app/ml/dl/parking/: __init__.py  occupancy_detector.py
backend/services/ia-service/app/ml/dl/yolo/: __init__.py  detector.py
backend/services/ia-service/app/schemas/: __init__.py  analytics.py  base.py  health.py  recognition.py
backend/services/ia-service/app/services/: __init__.py  parking_vision_service.py  plate_recognition_service.py  s3_service.py
backend/services/ia-service/app/utils/: __init__.py  formatters.py  image_utils.py  polygon_utils.py  validators.py
backend/services/ia-service/scripts/: download_models.py  test_plate_recognition.py
frontend/: package-lock.json  package.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/scss/: _custom.scss  styles.scss
(+120 files in other folders)
